# py-jitbuilder

./: .gitignore  CMakeLists.txt  setup.py
include/: TypeDictionary.hpp
pyjb/: output.json  setup.py
pyjb/benchmarks/: bench.py  bench_pypy.py
pyjb/pyjb/: asttyper.py  jitbuildermethod.py  printast.py  pyjbtypes.py  typedast.py
src/apigen/: cppgen.py  pygen.py
src/apigen/client/: jitbuilder_bindings.cpp
